<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtTitulo"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:hint="@string/titulo_hint" />

        <EditText
            android:id="@+id/edtDescripcion"
            android:layout_width="match_parent"
            android:layout_height="133dp"
            android:hint="@string/descripcion_hint" />

        <Spinner
            android:id="@+id/spinnerEstado"
            android:layout_width="match_parent"
            android:layout_height="78dp" />

        <Spinner
            android:id="@+id/spinnerPrioridad"
            android:layout_width="match_parent"
            android:layout_height="78dp" />

        <Button
            android:id="@+id/btnGuardar"
            android:text="@string/guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnCancelar"
            android:text="@string/cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>
